--- a/index.html
+++ b/index.html
@@ -10,24 +10,47 @@
 
 <body>
     <div class="promo-wraper">    
-    <header>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, maiores possimus adipisci reprehenderit enim vel autem consequatur minus praesentium corrupti error veritatis ullam eius doloremque totam eligendi necessitatibus soluta alias? Accusamus, nemo magni? Adipisci cupiditate quasi aspernatur ipsam tempore quibusdam dignissimos molestiae voluptatum tempora soluta! Nihil perferendis quae nam nulla.
-    </header>
+        <header>
+            <div class="container">
+                <a href="/"> 
+                    <img src="img/logo.png" alt="logo">
+                </a>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">WORK</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <main>
-        <section class="work-part">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia, facere!
-        </section>
-    </main>
+        <main>
+            <section class="work-part">
+                <div class="container">
+                    <h1 class="main-text">
+                        Hi there! We are the new kids on the block<br> 
+                        and we build awesome websites and mobile apps.
+                    </h1>
+
+                    <!--Idk this button definition, but let goal will move user somewhere-->
+                    <div class="btn-container">
+                        <a href="#" class="btn">WORK WITH US!</a>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
     
     <section class="services">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. A eveniet placeat non, possimus voluptatem dolore quidem quaerat amet dolor odio totam asperiores debitis necessitatibus, veniam excepturi! Eligendi tempora expedita repudiandae?
+        <h2 class="second-part-main-text">SERVICES WE PROVIDE</h2>
     </section>
     
 
     <footer>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, molestiae.
+
     </footer>
 </body>
 
