--- a/index.html
+++ b/index.html
@@ -48,30 +48,46 @@
         <div class="container">
             <h2 class="second-part-main-text">SERVICES WE PROVIDE</h2>
             <p class="second-part-main-subtitle">
-                We are working with both individuals and businesses from all over the globe 
+                We are working with both individuals and businesses from all over the globe <br>
                 to create awesome websites and applications.
             </p>
 
             <div class="services-list">
                 <div class="service-item">
-                    <img src="img/flag-icon.png" alt="Branding">
-                    <h3>BRANDING</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+                    <div class="service-item__icon">
+                        <img src="img/flag-icon.png" alt="Branding">
+                    </div>
+                    <div class="service-item__text">
+                        <h3>BRANDING</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+                    </div>
                 </div>
                 <div class="service-item">
-                    <img src="img/pencil-ico.png" alt="Design">
-                    <h3>DESIGN</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+                    <div class="service-item__icon">
+                        <img src="img/pencil-ico.png" alt="Design">
+                    </div>
+                    <div class="service-item__text">
+                        <h3>DESIGN</h3>
+                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+                    </div>
                 </div>
                 <div class="service-item">
-                    <img src="img/gears-icon.png" alt="Development">
-                    <h3>DEVELOPMENT</h3>
-                    <p>At vero eos et accusamus et iusto odio dignissimos qui blanditiis praesentium.</p>
+                    <div class="service-item__icon">
+                        <img src="img/gears-icon.png" alt="Development">
+                    </div>
+                    <div class="service-item__text">
+                        <h3>DEVELOPMENT</h3>
+                        <p>At vero eos et accusamus et iusto odio dignissimos qui blanditiis praesentium.</p>
+                    </div>
                 </div>
                 <div class="service-item">
-                    <img src="img/rocket-icon.png" alt="Rocket Science">
-                    <h3>ROCKET SCIENCE</h3>
-                    <p>Et harum quidem rerum est et expedita distinctio. Nam libero tempore.</p>
+                    <div class="service-item__icon">
+                        <img src="img/rocket-icon.png" alt="Rocket Science">
+                    </div>
+                    <div class="service-item__text">
+                        <h3>ROCKET SCIENCE</h3>
+                        <p>Et harum quidem rerum est et expedita distinctio. Nam libero tempore.</p>
+                    </div>
                 </div>
             </div>
         </div>
