--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div id="page-preloader" class="preloader">
+        <div class="loader"></div>
+    </div>
+
     <div class="promo-wraper">    
         <header>
             <div class="container">
@@ -96,6 +100,7 @@
     <footer>
 
     </footer>
+    <script src="js/preloader.js"></script>
 </body>
 
 </html>
