--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li><a href="#">HOME</a></li>
                         <li><a href="#">ABOUT</a></li>
                         <li><a href="#">WORK</a></li>
-                        <li><a href="#">BLOG</a></li>
+                        <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="#">CONTACT</a></li>
                     </ul>
                 </nav>
